--- a/_course/1.3-sidebar.md
+++ b/_course/1.3-sidebar.md
@@ -1,11 +1,9 @@
 ---
 layout: article
-title: Page - Sidebar (Aside)
-permalink: /page/sidebar-aside.html
-key: page-sidebar-aside
-cover: /docs/assets/images/axure/page-sidebar-aside.jpg
-aside:
-  toc: true
+title: Page - Sidebar
+permalink: /page/sidebar.html
+key: page-sidebar
+cover: /assets/images/axure/page-sidebar.jpg
 sidebar:
   nav: layouts
 ---
@@ -19,8 +17,6 @@ A post with a left sidebar.
     ---
     layout: article
     title: Page - Sidebar
-    aside:
-      toc: true
     sidebar:
       nav: layouts
     ---
